<resources>
    <string name="app_name">KotlinProjectPRO</string>
    <string name="textfield_label">Spent</string>
    <string name="section1">Home</string>
    <string name="section2">Budget</string>
    <string name="section3">Overview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section4">Settings</string>
    <string name="category">Category</string>
    <string name="prefix">$</string>
    <string name="titleText">Title</string>
    <string name="date">Date</string>
    <string name="income_label">Income</string>
    <string name="facebook_app_id">928552634401040</string>
    <string name="fb_login_protocol_scheme">fb928552634401040</string>
</resources>