<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/section1"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/money_icon"
        android:title="@string/section2"/>
    <item
        android:id="@+id/placeholder"
        android:title="" />
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/charts_icon"
        android:title="@string/section3"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/section4"/>
</menu>